# libpysal

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  THANKS.txt  api.html  appveyor.yml  asv.conf.json  bench.json  benchmark.ipynb  codecov.yml  environment.yml  examples.ipynb  fetch.ipynb  genindex.html  gsoc_phase_1_raster_interface.ipynb  index.html  installation.html  migration.html  objects.inv  pyproject.toml  raster_opti.ipynb  readthedocs.yml  references.html  requirements.test.txt  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_plus.txt  requirements_plus_conda.txt  requirements_plus_pip.txt  (+8 more)
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
_modules/: index.html
_sources/: index.rst.txt  migration.rst.txt  tutorial.rst.txt
_static/: documentation_options.js  references.bib
benchmarks/: bench_graph.py
ci/: 310-latest.yaml  310-minimal.yaml  310-oldest.yaml  310.yaml  310_shapely20b1.yaml  310_shapely_dev.yaml  311-dev.yaml  311-latest.yaml  311-no-optional.yaml  311-oldest.yaml  311.yaml  311_shapely_dev.yaml  312-dev.yaml  312-latest.yaml  312-min.yaml  312-no-optional.yaml  312-oldest.yaml  312.yaml  313-dev.yaml  313-latest.yaml  313-min.yaml  314-dev.yaml  314-latest.yaml  314-min.yaml  36-PLUS.yaml  36.yaml  37-PLUS.yaml  37-minimal.yaml  37.yaml  38-PLUS.yaml  38-minimal.yaml  38.yaml  39.yaml
dev/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  references.html  searchindex.js  sitemap.xml
doc/: api.rst  conf.py  index.rst
docs/: .buildinfo  Makefile  api.html  api.rst  conf.py  genindex.html  index.html  index.md  index.rst  installation.html  installation.md  installation.rst  make.bat  migration.rst  objects.inv  references.html  search.html  searchindex.js  tutorial.html  tutorial.rst  update_version_json.py
docsrc/: Makefile  api.rst  conf.py  index.rst  installation.rst  tutorial.rst
libpysal/: __init__.py  _kernels.py  _version.py  api.py  common.py  conftest.txt  kernels.ipynb  kernels.py  test_NameSpace.py  version.py
notebooks/: Example Datasets.ipynb  Raster Interface.ipynb  Raster_awareness_API.html  Raster_awareness_API.ipynb  examples.html  examples.ipynb  fetch.html  fetch.ipynb  io.html  io.ipynb  knn_coincident.ipynb  (+8 more)
(+526 files in other folders)
